# CFDSOLVER

./: .gitignore  ANALYSIS_FIX.md  CFDSolverGUI.spec  CFDSolverGUI_fixed.spec  CMakeLists.txt  COMPUTATIONAL_VS_PHYSICAL_SPACE.md  CURRENT_VS_PROPER_CURVILINEAR.md  GUI_USAGE.md  HOW_GRIDS_ACTUALLY_WORK.md  OGRID_SUCCESS.md  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  README_EXECUTABLE.md  RUN.bat  START_GUI.bat  STATUS.md  USER_GUIDE.md  build_exe.bat  cfd_gui.py  check_metrics.py  check_velocity.py  create_icon.py  launch_gui.sh  run_gui.bat  setup.py  testANIMS.py  three_body_3d.py
analysis/: aero_analysis.py  analysis.py  analyze_cartesian_results.py  animate.py  animate_current.py  create_animation.py  plot_all_results.py  plot_ogrid_topology.py  visualize_flow.py  visualize_grid.py
docs/: BODY_FITTED_MESH_READING.md
include/: curvilinear_field.hpp  curvilinear_grid.hpp  curvilinear_solver.hpp  field.hpp  grid.hpp  mesh_generator.hpp  solver.hpp
src/: curvilinear_field.cpp  curvilinear_grid.cpp  curvilinear_solver.cpp  field.cpp  grid.cpp  main.cpp  mesh_generator.cpp  ogrid_generator.cpp  solver.cpp  solver.cpp.backup  test_curvilinear.cpp  test_mesh.cpp
